force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/Consignee_Notify_Party_Mailing_Address__c.object-meta.xml
<CustomObject>
    <description>Consignee、Notify Party、書類送付先（唄）</description>
    <label>Consignee/Notify Party/書類送付先</label>
    <nameField>
        <label>Consignee/Notify Party/書類送付先No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>