force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/consignee_biko__c.field-meta.xml
<CustomField>
    <fullName>consignee_biko__c</fullName>
    <label>コンサイニー備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>