force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/consignee_country_cd__c.field-meta.xml
<CustomField>
    <fullName>consignee_country_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コンサイニー国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Consignee</relationshipLabel>
    <relationshipName>Consignee_Country</relationshipName>
    <type>Lookup</type>
</CustomField>