force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/consignee_email__c.field-meta.xml
<CustomField>
    <fullName>consignee_email__c</fullName>
    <label>コンサイニーEmail</label>
    <type>Email</type>
</CustomField>