force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/consignee_tal_no__c.field-meta.xml
<CustomField>
    <fullName>consignee_tal_no__c</fullName>
    <label>コンサイニー電話番号</label>
    <type>Phone</type>
</CustomField>