force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/consignee_tax_id__c.field-meta.xml
<CustomField>
    <fullName>consignee_tax_id__c</fullName>
    <label>コンサイニーTAXID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>