force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_address__c.field-meta.xml
<CustomField>
    <fullName>document_address__c</fullName>
    <label>書類送付先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>