force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_biko__c.field-meta.xml
<CustomField>
    <fullName>document_biko__c</fullName>
    <label>書類送付先備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>