force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_company_nm__c.field-meta.xml
<CustomField>
    <fullName>document_company_nm__c</fullName>
    <label>書類送付先会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>