force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_country_cd__c.field-meta.xml
<CustomField>
    <fullName>document_country_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類送付先国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>書類送付先</relationshipLabel>
    <relationshipName>Document_Country</relationshipName>
    <type>Lookup</type>
</CustomField>