force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_email__c.field-meta.xml
<CustomField>
    <fullName>document_email__c</fullName>
    <label>書類送付先Email</label>
    <type>Email</type>
</CustomField>