force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_tal_no__c.field-meta.xml
<CustomField>
    <fullName>document_tal_no__c</fullName>
    <label>書類送付先電話番号</label>
    <type>Phone</type>
</CustomField>