force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_type__c.field-meta.xml
<CustomField>
    <fullName>document_type__c</fullName>
    <label>書類送付先種類</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>会員情報と同じ</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>コンサイニーと同じ</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Notifyと同じ</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>都度確認</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>新規</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>