force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/document_zip_cd__c.field-meta.xml
<CustomField>
    <fullName>document_zip_cd__c</fullName>
    <label>書類送付先ZIPCD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>