force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Consignee/Notify Party/書類送付先</relationshipLabel>
    <relationshipName>member_auction_Consignee_Notify_Party_Ma</relationshipName>
    <type>Lookup</type>
</CustomField>