force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/notify_address__c.field-meta.xml
<CustomField>
    <fullName>notify_address__c</fullName>
    <label>Notify住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>