force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/notify_biko__c.field-meta.xml
<CustomField>
    <fullName>notify_biko__c</fullName>
    <label>Notify備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>