force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/notify_company_nm__c.field-meta.xml
<CustomField>
    <fullName>notify_company_nm__c</fullName>
    <label>Notify会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>