force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/notify_email__c.field-meta.xml
<CustomField>
    <fullName>notify_email__c</fullName>
    <label>NotifyEmail</label>
    <type>Email</type>
</CustomField>