force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/notify_tal_no__c.field-meta.xml
<CustomField>
    <fullName>notify_tal_no__c</fullName>
    <label>Notify電話番号</label>
    <type>Phone</type>
</CustomField>