force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/fields/ptn_nm__c.field-meta.xml
<CustomField>
    <fullName>ptn_nm__c</fullName>
    <label>パターン名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>