force-app/main/default/objects/Consignee_Notify_Party_Mailing_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>consignee_type__c</columns>
    <columns>consignee_tax_id__c</columns>
    <columns>consignee_company_nm__c</columns>
    <columns>consignee_address__c</columns>
    <columns>consignee_tal_no__c</columns>
    <columns>consignee_email__c</columns>
    <columns>consignee_biko__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>